fix: reorder '学校紹介' dropdown to match the sequence of sections on the about page

--- a/about.html
+++ b/about.html
@@ -53,9 +53,10 @@
                     <div class="nav-item has-dropdown">
                         <a href="about.html"><button>学校紹介 <span class="dropdown-arrow">▼</span></button></a>
                         <div class="dropdown-menu">
-                            <a href="about.html#history">校長挨拶・沿革</a>
+                            <a href="about.html">施設案内</a>
                             <a href="about.html#learning_center">学習センター</a>
-                            <a href="about.html#facilities">施設・設備</a>
+                            <a href="about.html#history">校長・沿革</a>
+                            <a href="about.html#access">アクセス（交通案内）</a>
                         </div>
                     </div>
 
@@ -92,9 +93,8 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>学校紹介・施設案内</h1>
-            <img src="img/facility.jpg" alt="学校紹介・施設案内"
-                style="width: 100%; height: auto; max-height: 400px; object-fit: cover; margin-top: 15px; background-color: #eee;">
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
