--- a/course.html
+++ b/course.html
@@ -53,9 +53,10 @@
                     <div class="nav-item has-dropdown">
                         <a href="about.html"><button>学校紹介 <span class="dropdown-arrow">▼</span></button></a>
                         <div class="dropdown-menu">
-                            <a href="about.html#history">校長挨拶・沿革</a>
+                            <a href="about.html">施設案内</a>
                             <a href="about.html#learning_center">学習センター</a>
-                            <a href="about.html#facilities">施設・設備</a>
+                            <a href="about.html#history">校長・沿革</a>
+                            <a href="about.html#access">アクセス（交通案内）</a>
                         </div>
                     </div>
 
@@ -92,7 +93,7 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>コース紹介</h1>
+            <h1>霞ヶ浦高等学校</h1>
             <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
