--- a/hub_parents.html
+++ b/hub_parents.html
@@ -104,9 +104,10 @@
                     <div class="nav-item has-dropdown">
                         <a href="about.html"><button>学校紹介 <span class="dropdown-arrow">▼</span></button></a>
                         <div class="dropdown-menu">
-                            <a href="about.html#history">校長挨拶・沿革</a>
+                            <a href="about.html">施設案内</a>
                             <a href="about.html#learning_center">学習センター</a>
-                            <a href="about.html#facilities">施設・設備</a>
+                            <a href="about.html#history">校長・沿革</a>
+                            <a href="about.html#access">アクセス（交通案内）</a>
                         </div>
                     </div>
 
@@ -139,11 +140,11 @@
 
                     <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
                 </nav>
-                
+
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>在校生・保護者の方へ</h1>
+            <h1>霞ヶ浦高等学校</h1>
             <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
