layout: restructure hub_admission.html into admission, school info, and prominent inquiry button

--- a/hub_admission.html
+++ b/hub_admission.html
@@ -27,7 +27,7 @@
 
         .hub-card:hover {
             transform: translateY(-5px);
-            
+
         }
 
         .hub-img {
@@ -150,23 +150,32 @@
     </header>
 
     <main class="container">
+        <!-- Section 1: Admission Info -->
         <section class="course-section">
-            <h2 class="course-title" style="text-align: left; border-left: 5px solid #333; padding-left: 15px;">
-                受験生向けメニュー</h2>
-            <p style="margin-bottom: 20px; font-size: 1.1em;">霞ヶ浦高等学校の受験をお考えの皆様へ、学校説明会や募集要項などの情報をご案内します。</p>
-
+            <h2 class="course-title"
+                style="text-align: left; border-left: 5px solid #333; padding-left: 15px; margin-bottom: 30px;">
+                入試に関すること
+            </h2>
             <div class="hub-grid">
-
                 <a href="admission.html" class="hub-card">
-                    <div class="hub-img">受験情報</div>
+                    <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
                     <div class="hub-content">
                         <div class="hub-title">受験情報・入試関連</div>
                         <div class="hub-desc">募集要項、出願方法、個別相談会日程など、入試に関する基本情報はこちらのページでご確認いただけます。</div>
                     </div>
                 </a>
+            </div>
+        </section>
 
+        <!-- Section 2: School Info -->
+        <section class="course-section" style="margin-top: 50px;">
+            <h2 class="course-title"
+                style="text-align: left; border-left: 5px solid #333; padding-left: 15px; margin-bottom: 30px;">
+                学校に関すること
+            </h2>
+            <div class="hub-grid">
                 <a href="course.html" class="hub-card">
-                    <div class="hub-img">コース紹介</div>
+                    <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
                     <div class="hub-content">
                         <div class="hub-title">コース紹介</div>
                         <div class="hub-desc">「特進選抜」「特進」「総合進学」の3つのコースの特色とカリキュラムをご紹介します。</div>
@@ -174,7 +183,7 @@
                 </a>
 
                 <a href="about.html" class="hub-card">
-                    <div class="hub-img">学校紹介</div>
+                    <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
                     <div class="hub-content">
                         <div class="hub-title">学校紹介・アクセス</div>
                         <div class="hub-desc">本校の沿革や教育方針、充実した施設・設備、および交通アクセスについてご案内します。</div>
@@ -182,23 +191,23 @@
                 </a>
 
                 <a href="club.html" class="hub-card">
-                    <div class="hub-img">部活動</div>
+                    <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
                     <div class="hub-content">
                         <div class="hub-title">部活動</div>
                         <div class="hub-desc">全国レベルで活躍する運動部から文化部まで、多彩な部活動とその戦績をご紹介します。</div>
                     </div>
                 </a>
-
-                <a href="contact_admission.html" class="hub-card" style="border: 2px solid #333;">
-                    <div class="hub-img" style="background-color: #333; color: white;">お問い合わせ</div>
-                    <div class="hub-content">
-                        <div class="hub-title">受験生専用 お問い合わせ</div>
-                        <div class="hub-desc">入試についてのご質問や、学校案内資料のご請求、各種イベントに関するお問い合わせはこちらから承ります。</div>
-                    </div>
-                </a>
-
             </div>
+        </section>
 
+        <!-- Section 3: Inquiry Button -->
+        <section class="course-section" style="margin-top: 60px; text-align: center; padding-bottom: 40px;">
+            <a href="contact.html"
+                style="display: inline-block; width: 100%; max-width: 800px; padding: 30px 20px; background-color: #fff; color: #1a3c5a; text-decoration: none; border: 2px solid #1a3c5a; border-radius: 8px; font-weight: bold; font-size: 1.5em; transition: all 0.3s ease;">
+                <span
+                    style="display: block; font-size: 0.8em; color: #666; margin-bottom: 10px; font-weight: normal;">入試に関するご質問や、学校案内資料のご請求など</span>
+                受験生専用 お問い合わせはこちらから
+            </a>
         </section>
     </main>
 
