fix: update h1 title in recruit.html and remove hero placeholder

--- a/recruit.html
+++ b/recruit.html
@@ -93,8 +93,7 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>霞ヶ浦高等学校</h1>
-            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
+            <h1>教員採用</h1>
         </div>
     </header>
 
@@ -110,7 +109,7 @@
             </div>
         </section>
 
-</main>
+    </main>
 
     <footer>
         <div class="container">
