content: add links to school life, career, and interviews in admission hub

--- a/hub_admission.html
+++ b/hub_admission.html
@@ -197,6 +197,30 @@
                         <div class="hub-desc">全国レベルで活躍する運動部から文化部まで、多彩な部活動とその戦績をご紹介します。</div>
                     </div>
                 </a>
+
+                <a href="school_life.html" class="hub-card">
+                    <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
+                    <div class="hub-content">
+                        <div class="hub-title">学校生活</div>
+                        <div class="hub-desc">年間行事、制服の紹介など、霞ヶ浦高等学校での充実した学校生活の様子をご紹介します。</div>
+                    </div>
+                </a>
+
+                <a href="career.html" class="hub-card">
+                    <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
+                    <div class="hub-content">
+                        <div class="hub-title">進路指導・合格実績</div>
+                        <div class="hub-desc">一人ひとりの希望進路に向けた手厚いサポート体制と、大学進学等の実績をご案内します。</div>
+                    </div>
+                </a>
+
+                <a href="interview.html" class="hub-card">
+                    <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
+                    <div class="hub-content">
+                        <div class="hub-title">卒業生の声</div>
+                        <div class="hub-desc">各方面で活躍している卒業生のインタビューを通じて、本校での学びと進路実現のリアルをお伝えします。</div>
+                    </div>
+                </a>
             </div>
         </section>
 
