fix: update inquiry button link in admission hub to point to contact_admission.html

--- a/hub_admission.html
+++ b/hub_admission.html
@@ -226,7 +226,7 @@
 
         <!-- Section 3: Inquiry Button -->
         <section class="course-section" style="margin-top: 60px; text-align: center; padding-bottom: 40px;">
-            <a href="contact.html"
+            <a href="contact_admission.html"
                 style="display: inline-block; width: 100%; max-width: 800px; padding: 30px 20px; background-color: #fff; color: #1a3c5a; text-decoration: none; border: 2px solid #1a3c5a; border-radius: 8px; font-weight: bold; font-size: 1.5em; transition: all 0.3s ease;">
                 <span
                     style="display: block; font-size: 0.8em; color: #666; margin-bottom: 10px; font-weight: normal;">入試に関するご質問や、学校案内資料のご請求など</span>
