content: split admission info into finer links and add consultation banner

--- a/hub_admission.html
+++ b/hub_admission.html
@@ -157,12 +157,40 @@
                 入試に関すること
             </h2>
             <div class="hub-grid">
-                <a href="admission.html" class="hub-card">
+                <a href="admission.html#guide" class="hub-card">
                     <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
                     <div class="hub-content">
-                        <div class="hub-title">受験情報・入試関連</div>
-                        <div class="hub-desc">募集要項、出願方法、個別相談会日程など、入試に関する基本情報はこちらのページでご確認いただけます。</div>
+                        <div class="hub-title">学校案内・データブック</div>
+                        <div class="hub-desc">本校のデジタルパンフレットや、過去の入試結果などの詳細データをご覧いただけます。</div>
                     </div>
+                </a>
+
+                <a href="admission.html#application" class="hub-card">
+                    <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
+                    <div class="hub-content">
+                        <div class="hub-title">出願・入試関係書類</div>
+                        <div class="hub-desc">募集要項の詳細や、Web出願サイトへのリンク、出願に必要な書類のダウンロードはこちら。</div>
+                    </div>
+                </a>
+
+                <a href="admission.html#faq" class="hub-card">
+                    <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
+                    <div class="hub-content">
+                        <div class="hub-title">よくあるご質問 (FAQ)</div>
+                        <div class="hub-desc">受験生や保護者の皆様から寄せられる、入試や学校生活に関するよくある質問とその回答をまとめました。</div>
+                    </div>
+                </a>
+            </div>
+
+            <!-- Consultation Banner -->
+            <div style="margin-top: 40px; text-align: center;">
+                <a href="admission.html#consultation" class="hub-card"
+                    style="display: block; background-color: #e6f2ff; border: 2px solid #0056b3; border-radius: 8px; padding: 40px 20px; text-decoration: none; transition: transform 0.2s, box-shadow 0.2s;">
+                    <h3 style="color: #0056b3; font-size: 1.6em; margin-bottom: 10px;">個別相談会（入試相談）のご予約</h3>
+                    <p style="font-size: 1.1em; color: #555; margin-bottom: 20px;">本校の教員が、受験に対する不安や疑問、コース選びについて直接お答えします。
+                    </p>
+                    <span
+                        style="display: inline-block; background-color: #0056b3; color: #fff; padding: 12px 40px; border-radius: 30px; font-weight: bold; font-size: 1.1em;">日程・お申し込み詳細はこちら</span>
                 </a>
             </div>
         </section>
