fix: dynamically restore page-specific H1 titles across all views

--- a/hub_parents.html
+++ b/hub_parents.html
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>霞ヶ浦高等学校</h1>
+            <h1>在校生・保護者の方へ</h1>
             <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
