--- a/news.html
+++ b/news.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex, nofollow">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>お知らせ</title>
     <link rel="stylesheet" href="style.css">
@@ -100,7 +102,6 @@
 
     <main class="container">
 
-        <h1>お知らせ</h1>
         <section class="course-section">
             <h2 class="course-title">お知らせ一覧</h2>
             <div class="content-block">
@@ -112,7 +113,7 @@
             </div>
         </section>
 
-</main>
+    </main>
 
     <footer>
         <div class="container">
