--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex, nofollow">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>学校紹介・施設案内</title>
     <link rel="stylesheet" href="style.css">
