--- a/admission.html
+++ b/admission.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex, nofollow">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>受験生案内 - 霞ヶ浦高等学校</title>
     <link rel="stylesheet" href="style.css">
