--- a/contact_alumni.html
+++ b/contact_alumni.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex, nofollow">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>卒業生専用フォーム（証明書申請） - 霞ヶ浦高等学校</title>
     <link rel="stylesheet" href="style.css">
