--- a/school_life.html
+++ b/school_life.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex, nofollow">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>学校生活 - 年間行事・制服紹介</title>
     <link rel="stylesheet" href="style.css">
