--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="noindex, nofollow">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>学校紹介・施設案内</title>
+    <title></title>
     <link rel="stylesheet" href="style.css">
 </head>
 
