--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="noindex, nofollow">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>お知らせ</title>
+    <title></title>
     <link rel="stylesheet" href="style.css">
 </head>
 
