--- a/school_life.html
+++ b/school_life.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="noindex, nofollow">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>学校生活 - 年間行事・制服紹介</title>
+    <title></title>
     <link rel="stylesheet" href="style.css">
 </head>
 
