content: add scholarship and influenza banners to parents hub page

--- a/hub_parents.html
+++ b/hub_parents.html
@@ -29,7 +29,7 @@
 
         .hub-card:hover {
             transform: translateY(-5px);
-            
+
         }
 
         .hub-img {
@@ -191,20 +191,46 @@
                     </div>
                 </a>
 
-                <!-- Missing Requirement C-5 -->
-                <a href="#" class="hub-card" style="border: 2px solid #5587aa;">
-                    <div class="hub-img" style="background-color: #5587aa; color: white;">治癒報告書 (PDF)</div>
-                    <div class="hub-content">
-                        <div class="hub-title">治癒報告書のダウンロード</div>
-                        <div class="hub-desc">インフルエンザ等の感染症から回復し、登校を再開する際に必要な書類はこちらからダウンロードしてください。</div>
-                    </div>
-                </a>
-
                 <a href="contact_parents.html" class="hub-card" style="border: 2px solid #333;">
                     <div class="hub-img" style="background-color: #333; color: white;">お問い合わせ</div>
                     <div class="hub-content">
                         <div class="hub-title">在校生・保護者専用 連絡フォーム</div>
                         <div class="hub-desc">欠席・遅刻のご連絡や、学校生活・学習に関するご相談などはこちらからお送りください。</div>
+                    </div>
+                </a>
+
+            </div>
+
+            <!-- Important Banners Section -->
+            <div class="banner-container"
+                style="display: flex; flex-direction: column; gap: 30px; max-width: 600px; margin: 60px auto 0;">
+
+                <!-- Scholarship Banner -->
+                <a href="#"
+                    style="display: block; text-decoration: none; border: 8px solid #6b9e7d; overflow: hidden; text-align: center; transition: opacity 0.3s;">
+                    <div style="background-color: #fff; padding: 25px 20px;">
+                        <div
+                            style="color: #6b9e7d; font-size: 2em; font-weight: bold; letter-spacing: 4px; line-height: 1.2;">
+                            奨学金制度</div>
+                        <div style="color: #6b9e7d; font-size: 1.6em; letter-spacing: 2px;">のご案内</div>
+                    </div>
+                    <div
+                        style="background-color: #6b9e7d; color: #fff; padding: 15px; font-size: 1.4em; letter-spacing: 2px;">
+                        詳しくはこちら
+                    </div>
+                </a>
+
+                <!-- Influenza Banner -->
+                <a href="#"
+                    style="display: block; text-decoration: none; border: 2px solid #65cdff; overflow: hidden; text-align: center; transition: opacity 0.3s; box-sizing: border-box;">
+                    <div style="background-color: #fff; padding: 25px 20px;">
+                        <div style="color: #555; font-size: 1.6em; font-weight: bold; letter-spacing: 1px;">
+                            インフルエンザ等の欠席について</div>
+                    </div>
+                    <!-- Striped background effect using CSS gradient -->
+                    <div
+                        style="background: repeating-linear-gradient(45deg, #65cdff, #65cdff 10px, #7dd5ff 10px, #7dd5ff 20px); color: #333; padding: 15px; font-size: 1.3em; font-weight: bold; letter-spacing: 1px;">
+                        治ゆ報告書のダウンロードはこちら&gt;&gt;
                     </div>
                 </a>
 
