style: change parents hub banners to display side-by-side

--- a/hub_parents.html
+++ b/hub_parents.html
@@ -203,11 +203,11 @@
 
             <!-- Important Banners Section -->
             <div class="banner-container"
-                style="display: flex; flex-direction: column; gap: 30px; max-width: 600px; margin: 60px auto 0;">
+                style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: center; gap: 30px; max-width: 900px; margin: 60px auto 0;">
 
                 <!-- Scholarship Banner -->
                 <a href="#"
-                    style="display: block; text-decoration: none; border: 8px solid #6b9e7d; overflow: hidden; text-align: center; transition: opacity 0.3s;">
+                    style="display: block; flex: 1; min-width: 300px; text-decoration: none; border: 8px solid #6b9e7d; overflow: hidden; text-align: center; transition: opacity 0.3s;">
                     <div style="background-color: #fff; padding: 25px 20px;">
                         <div
                             style="color: #6b9e7d; font-size: 2em; font-weight: bold; letter-spacing: 4px; line-height: 1.2;">
@@ -222,14 +222,15 @@
 
                 <!-- Influenza Banner -->
                 <a href="#"
-                    style="display: block; text-decoration: none; border: 2px solid #65cdff; overflow: hidden; text-align: center; transition: opacity 0.3s; box-sizing: border-box;">
-                    <div style="background-color: #fff; padding: 25px 20px;">
-                        <div style="color: #555; font-size: 1.6em; font-weight: bold; letter-spacing: 1px;">
-                            インフルエンザ等の欠席について</div>
+                    style="display: block; flex: 1; min-width: 300px; text-decoration: none; border: 2px solid #65cdff; overflow: hidden; text-align: center; transition: opacity 0.3s; box-sizing: border-box;">
+                    <div
+                        style="background-color: #fff; padding: 25px 20px; height: calc(100% - 63px); display: flex; align-items: center; justify-content: center;">
+                        <div style="color: #555; font-size: 1.5em; font-weight: bold; letter-spacing: 1px;">
+                            インフルエンザ等の<br>欠席について</div>
                     </div>
                     <!-- Striped background effect using CSS gradient -->
                     <div
-                        style="background: repeating-linear-gradient(45deg, #65cdff, #65cdff 10px, #7dd5ff 10px, #7dd5ff 20px); color: #333; padding: 15px; font-size: 1.3em; font-weight: bold; letter-spacing: 1px;">
+                        style="background: repeating-linear-gradient(45deg, #65cdff, #65cdff 10px, #7dd5ff 10px, #7dd5ff 20px); color: #333; padding: 15px; font-size: 1.2em; font-weight: bold; letter-spacing: 1px;">
                         治ゆ報告書のダウンロードはこちら&gt;&gt;
                     </div>
                 </a>
