--- a/career.html
+++ b/career.html
@@ -170,22 +170,25 @@
 
         <hr>
 
-        <!-- Kokugakuin University Partnership Section (Missing Requirement B-5, C-4) -->
+        <!-- Kokugakuin University Partnership Section -->
         <section class="course-section">
             <h2 id="kokugakuin" class="course-title" style="margin-top: 50px;">國學院大學連携協定</h2>
             <div class="content-block"
                 style="text-align: center; padding: 30px; background-color: #fff; border: 1px dashed #999;">
-                <p style="margin-bottom: 20px;">本校は國學院大學と連携協定を結んでおり、高大連携プログラムなどを実施しています。<br>詳細は以下の資料をダウンロードしてご確認ください。
+                <p style="margin-bottom: 30px;">本校は國學院大學と連携協定を結んでおり、高大連携プログラムなどを実施しています。<br>詳細は以下の資料をご確認ください。
                 </p>
-                <a href="#"
-                    style="display: inline-block; padding: 15px 30px; background-color: #e2e2e2; border: 1px solid #ccc; color: #333; text-decoration: none; font-weight: bold; border-radius: 4px; ">
-                    <svg span style="vertical-align: middle; margin-right: 5px; width: 20px; height: 20px;" fill="none"
+                <!-- Embedded PDF Placeholder -->
+                <div
+                    style="width: 100%; max-width: 800px; height: 500px; margin: 0 auto; background-color: #eef2f5; border: 1px solid #ccc; display: flex; flex-direction: column; align-items: center; justify-content: center; color: #555;">
+                    <svg style="width: 48px; height: 48px; margin-bottom: 15px; color: #999;" fill="none"
                         stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
+                            d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z">
+                        </path>
                     </svg>
-                    國學院大學連携協定の案内をダウンロード (PDFで挿入)
-                </a>
+                    <span style="font-size: 1.2em; font-weight: bold; margin-bottom: 8px;">國學院大學連携協定の案内 (PDF)</span>
+                    <span style="font-size: 0.9em; color: #777;">※ここにPDFが直接埋め込まれて表示されます</span>
+                </div>
             </div>
         </section>
 
@@ -195,10 +198,6 @@
             <h2 class="course-title" id="results">最近５年間の合格大学（浪人含む）</h2>
             <div class="content-block center-text">
                 <div class="image-placeholder" style="height: 300px;">ここに写真を入れるイメージ</div>
-                <div style="margin-top: 20px;">
-                    <a href="#"><button
-                            style="padding: 15px 30px; font-size: 1.1em; cursor: pointer; background: #666; color: #fff; border: none; border-radius: 4px;">最新の実績を見る</button></a>
-                </div>
             </div>
         </section>
 
