content: update parents hub cards to specific current student needs

--- a/hub_parents.html
+++ b/hub_parents.html
@@ -159,35 +159,43 @@
 
             <div class="hub-grid">
 
-                <a href="school_life.html" class="hub-card">
-                    <div class="hub-img">学校生活</div>
+                <a href="school_life.html#annual_events" class="hub-card">
+                    <div class="hub-img" style="background-color: #f8f9fa;">行事予定表</div>
                     <div class="hub-content">
-                        <div class="hub-title">年間スケジュール・制服</div>
-                        <div class="hub-desc">今年度の行事予定や、制服の正しい着こなし方、各種基本方針などをご確認いただけます。</div>
+                        <div class="hub-title">年間・月間スケジュール</div>
+                        <div class="hub-desc">今年度の年間行事予定や、定期試験などの詳細な月間スケジュールをご確認いただけます。</div>
                     </div>
                 </a>
 
-                <a href="about.html" class="hub-card">
-                    <div class="hub-img">学校情報</div>
+                <a href="#" class="hub-card">
+                    <div class="hub-img" style="background-color: #f8f9fa;">証明書発行</div>
                     <div class="hub-content">
-                        <div class="hub-title">学校紹介・アクセス</div>
-                        <div class="hub-desc">本校のコース詳細や、最新の施設・設備情報、およびアクセス情報をご案内します。</div>
+                        <div class="hub-title">各種証明書等の発行について</div>
+                        <div class="hub-desc">在学証明書、成績証明書、通学証明書（学割証）などの各種証明書の発行手順をご案内します。</div>
+                    </div>
+                </a>
+
+                <a href="school_life.html#uniform" class="hub-card">
+                    <div class="hub-img" style="background-color: #f8f9fa;">生活のルール</div>
+                    <div class="hub-content">
+                        <div class="hub-title">校則・各種基本方針・制服</div>
+                        <div class="hub-desc">本校の校則や自転車通学のルール、いじめ防止基本方針、制服の着こなし方などについて。</div>
                     </div>
                 </a>
 
                 <a href="career.html" class="hub-card">
-                    <div class="hub-img">進路指導</div>
+                    <div class="hub-img" style="background-color: #f8f9fa;">学習・進路</div>
                     <div class="hub-content">
-                        <div class="hub-title">進路状況・大学連携</div>
-                        <div class="hub-desc">最新の進学・就職状況の実績や、大学との連携協定プログラム等についてご案内します。</div>
+                        <div class="hub-title">シラバス・進路指導体制</div>
+                        <div class="hub-desc">各学年・コースごとの学習内容（シラバス）や、進路面談などの進路指導スケジュールをご案内します。</div>
                     </div>
                 </a>
 
-                <a href="club.html" class="hub-card">
-                    <div class="hub-img">部活動</div>
+                <a href="#" class="hub-card">
+                    <div class="hub-img" style="background-color: #f8f9fa;">相談窓口</div>
                     <div class="hub-content">
-                        <div class="hub-title">部活動</div>
-                        <div class="hub-desc">生徒が熱心に取り組む運動部・文化部の活動報告やスケジュールをご確認いただけます。</div>
+                        <div class="hub-title">スクールカウンセラー・悩み相談</div>
+                        <div class="hub-desc">学校生活での悩みや不安について、専門のスクールカウンセラーに相談できる窓口のご案内です。</div>
                     </div>
                 </a>
 
