--- a/club.html
+++ b/club.html
@@ -95,7 +95,13 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>部活動</h1>
+            <div style="display: flex; gap: 20px; margin-bottom: 30px;">
+                <a href="#sports"
+                    style="flex: 1; max-width: 250px; text-align: center; padding: 15px 0; border: 2px solid #235194; color: #235194; text-decoration: none; font-size: 1.4em; border-radius: 4px; background-color: #fff;">運動部</a>
+                <a href="#culture"
+                    style="flex: 1; max-width: 250px; text-align: center; padding: 15px 0; border: 2px solid #235194; color: #235194; text-decoration: none; font-size: 1.4em; border-radius: 4px; background-color: #fff;">文化部</a>
+            </div>
+            <h1 id="sports">部活動(運動部)</h1>
         </div>
     </header>
 
