content: add day in the life schedule to school life page and nav

--- a/club.html
+++ b/club.html
@@ -67,6 +67,7 @@
                         <div class="dropdown-menu">
                             <a href="school_life.html#annual_events">年間スケジュール</a>
                             <a href="school_life.html#uniform">制服</a>
+                            <a href="school_life.html#daily_schedule">在校生の1日のスケジュール</a>
                             <a href="school_life.html#anti_bullying">いじめ防止基本方針</a>
                             <a href="school_life.html#anti_truancy">不登校未然防止方針</a>
                         </div>
@@ -95,13 +96,8 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <div style="display: flex; gap: 20px; margin-bottom: 30px; justify-content: center;">
-                <a href="#sports"
-                    style="flex: 1; max-width: 250px; text-align: center; padding: 15px 0; border: 2px solid #235194; color: #235194; text-decoration: none; font-size: 1.4em; border-radius: 4px; background-color: #fff;">運動部</a>
-                <a href="#culture"
-                    style="flex: 1; max-width: 250px; text-align: center; padding: 15px 0; border: 2px solid #235194; color: #235194; text-decoration: none; font-size: 1.4em; border-radius: 4px; background-color: #fff;">文化部</a>
-            </div>
-            <h1 id="sports">部活動(運動部)</h1>
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
