--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                         <div class="dropdown-menu">
                             <a href="school_life.html#annual_events">年間スケジュール</a>
                             <a href="school_life.html#uniform">制服</a>
+                            <a href="school_life.html#daily_schedule">在校生の1日のスケジュール</a>
                             <a href="school_life.html#anti_bullying">いじめ防止基本方針</a>
                             <a href="school_life.html#anti_truancy">不登校未然防止方針</a>
                         </div>
