style: apply grayscale to consultation page

--- a/consultation.html
+++ b/consultation.html
@@ -13,7 +13,7 @@
         }
 
         .consult-title {
-            border-left: 5px solid #235194;
+            border-left: 5px solid #666;
             padding-left: 15px;
             margin-bottom: 25px;
             color: #333;
@@ -25,11 +25,11 @@
         }
 
         .qa-box {
-            background-color: #f9f9f9;
+            background-color: #f2f2f2;
             padding: 20px;
             border-radius: 8px;
             margin-bottom: 20px;
-            border-left: 4px solid #6b9e7d;
+            border-left: 4px solid #999;
         }
 
         .qa-q {
@@ -156,16 +156,15 @@
     <main class="container">
 
         <section class="consult-section">
-            <img src="img/image.png" alt="笑顔の先生や、明るい校舎"
-                style="width: 100%; max-width: 1200px; height: auto; display: block; margin: 0 auto 40px auto; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+            <div style="width: 100%; max-width: 1200px; height: 400px; background-color: #ddd; display: flex; align-items: center; justify-content: center; margin: 0 auto 40px auto; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); color: #666; font-size: 1.5em; font-weight: bold;">📸 笑顔の先生や、明るい校舎</div>
         </section>
 
         <!-- こんな方は、個別相談がおすすめ -->
         <section class="consult-section">
             <h2 class="consult-title">🚩 こんな方は、個別相談がおすすめ</h2>
-            <div style="background-color: #fcebeb; padding: 30px; border-radius: 8px;">
+            <div style="background-color: #f2f2f2; padding: 30px; border-radius: 8px;">
                 <ul class="consult-list"
-                    style="color: #c00; font-weight: bold; list-style-type: disc; padding-left: 20px;">
+                    style="color: #333; font-weight: bold; list-style-type: disc; padding-left: 20px;">
                     <li>霞ヶ浦高校の雰囲気を直接知りたい！</li>
                     <li>どのコースが自分に合っているか相談したい。</li>
                     <li>部活動と勉強、両立できるか不安…。</li>
@@ -245,7 +244,7 @@
             <h2 class="consult-title" style="text-align: left;">📝 お申し込みはこちら</h2>
             <p style="margin-bottom: 30px; font-size: 1.1em;">お申し込みはWebから簡単に行えます！</p>
             <a href="#"
-                style="display: inline-block; background-color: #d14141; color: white; text-decoration: none; padding: 20px 50px; border-radius: 50px; font-size: 1.6em; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.2); transition: transform 0.2s;">
+                style="display: inline-block; background-color: #555; color: white; text-decoration: none; padding: 20px 50px; border-radius: 50px; font-size: 1.6em; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.2); transition: transform 0.2s;">
                 🚀 予約はこちら（Web申込サイトへ）
             </a>
         </section>
@@ -272,12 +271,12 @@
         <hr style="margin: 40px 0; border: none; border-top: 1px solid #ddd;">
 
         <!-- 中学生のみなさんへ -->
-        <section class="consult-section" style="background-color: #eef5ff; padding: 40px; border-radius: 8px;">
-            <h2 class="consult-title" style="border-left-color: #c00;">💡 中学生のみなさんへ</h2>
+        <section class="consult-section" style="background-color: #f2f2f2; padding: 40px; border-radius: 8px;">
+            <h2 class="consult-title" style="border-left-color: #333;">💡 中学生のみなさんへ</h2>
             <p style="font-size: 1.1em; line-height: 1.8; margin-bottom: 20px;">
                 「個別相談」って聞くと少し緊張するかもしれませんが、面接試験ではないので安心してください！あなたの将来を応援するための場所です。私服でも制服でもOK。保護者の方と一緒でも、お一人でも大歓迎です。
             </p>
-            <p style="font-size: 1.2em; font-weight: bold; color: #235194; margin: 0; text-align: center;">
+            <p style="font-size: 1.2em; font-weight: bold; color: #333; margin: 0; text-align: center;">
                 霞ヶ浦高校で、あなたに会えるのを楽しみにしています！
             </p>
         </section>
