style: replace three images with one vertical image on career page

--- a/career.html
+++ b/career.html
@@ -112,13 +112,16 @@
             </div>
 
             <div class="grade-guidance-container">
-                <!-- 1st Year -->
-                <div class="grade-year-section">
-                    <div class="two-column">
-                        <div class="column">
-                            <div class="image-placeholder">ここに写真を入れるイメージ</div>
-                        </div>
-                        <div class="column">
+                <div class="two-column" style="align-items: stretch;">
+                    <div class="column" style="display: flex;">
+                        <div class="image-placeholder"
+                            style="flex: 1; min-height: 500px; display: flex; align-items: center; justify-content: center;">
+                            ここに写真を入れるイメージ（縦長）</div>
+                    </div>
+                    <div class="column"
+                        style="display: flex; flex-direction: column; justify-content: space-between; gap: 30px;">
+                        <!-- 1st Year -->
+                        <div>
                             <h4>1年次</h4>
                             <ul class="guidance-list">
                                 <li>進路説明会</li>
@@ -127,16 +130,11 @@
                                 <li>進路希望調査</li>
                             </ul>
                         </div>
-                    </div>
-                </div>
 
-                <!-- 2nd Year -->
-                <div class="grade-year-section">
-                    <div class="two-column">
-                        <div class="column">
-                            <div class="image-placeholder">ここに写真を入れるイメージ</div>
-                        </div>
-                        <div class="column">
+                        <hr style="border: 0; border-top: 1px dashed #ddd; margin: 0;">
+
+                        <!-- 2nd Year -->
+                        <div>
                             <h4>2年次</h4>
                             <ul class="guidance-list">
                                 <li>大学・専門学校の出前授業</li>
@@ -145,16 +143,11 @@
                                 <li>進路講話</li>
                             </ul>
                         </div>
-                    </div>
-                </div>
 
-                <!-- 3rd Year -->
-                <div class="grade-year-section">
-                    <div class="two-column">
-                        <div class="column">
-                            <div class="image-placeholder">ここに写真を入れるイメージ</div>
-                        </div>
-                        <div class="column">
+                        <hr style="border: 0; border-top: 1px dashed #ddd; margin: 0;">
+
+                        <!-- 3rd Year -->
+                        <div>
                             <h4>3年次</h4>
                             <ul class="guidance-list">
                                 <li>進路希望別説明会</li>
