style: make career guidance sections more compact and centered

--- a/career.html
+++ b/career.html
@@ -119,42 +119,48 @@
                             ここに写真を入れるイメージ（縦長）</div>
                     </div>
                     <div class="column"
-                        style="display: flex; flex-direction: column; justify-content: space-between; gap: 30px;">
+                        style="display: flex; flex-direction: column; justify-content: space-evenly; gap: 20px;">
                         <!-- 1st Year -->
                         <div>
-                            <h4>1年次</h4>
-                            <ul class="guidance-list">
-                                <li>進路説明会</li>
-                                <li>文理説明会</li>
-                                <li>各コース集会</li>
-                                <li>進路希望調査</li>
-                            </ul>
+                            <h4 style="text-align: center; font-size: 1.5em; margin-bottom: 20px; color: #333;">1年次</h4>
+                            <div style="max-width: 400px; margin: 0 auto;">
+                                <ul class="guidance-list" style="margin-bottom: 0;">
+                                    <li style="padding: 10px 0;">進路説明会</li>
+                                    <li style="padding: 10px 0;">文理説明会</li>
+                                    <li style="padding: 10px 0;">各コース集会</li>
+                                    <li style="padding: 10px 0;">進路希望調査</li>
+                                </ul>
+                            </div>
                         </div>
 
-                        <hr style="border: 0; border-top: 1px dashed #ddd; margin: 0;">
+                        <hr style="border: 0; border-top: 2px solid #ddd; margin: 10px 0;">
 
                         <!-- 2nd Year -->
                         <div>
-                            <h4>2年次</h4>
-                            <ul class="guidance-list">
-                                <li>大学・専門学校の出前授業</li>
-                                <li>大学・専門学校・企業の見学バスツアー</li>
-                                <li>志望理由書等書き方講話</li>
-                                <li>進路講話</li>
-                            </ul>
+                            <h4 style="text-align: center; font-size: 1.5em; margin-bottom: 20px; color: #333;">2年次</h4>
+                            <div style="max-width: 400px; margin: 0 auto;">
+                                <ul class="guidance-list" style="margin-bottom: 0;">
+                                    <li style="padding: 10px 0;">大学・専門学校の出前授業</li>
+                                    <li style="padding: 10px 0;">大学・専門学校・企業の見学バスツアー</li>
+                                    <li style="padding: 10px 0;">志望理由書等書き方講話</li>
+                                    <li style="padding: 10px 0;">進路講話</li>
+                                </ul>
+                            </div>
                         </div>
 
-                        <hr style="border: 0; border-top: 1px dashed #ddd; margin: 0;">
+                        <hr style="border: 0; border-top: 2px solid #ddd; margin: 10px 0;">
 
                         <!-- 3rd Year -->
                         <div>
-                            <h4>3年次</h4>
-                            <ul class="guidance-list">
-                                <li>進路希望別説明会</li>
-                                <li>大学・専門学校オープンキャンパス参加</li>
-                                <li>合同進学相談会参加</li>
-                                <li>企業見学（就職希望者）</li>
-                            </ul>
+                            <h4 style="text-align: center; font-size: 1.5em; margin-bottom: 20px; color: #333;">3年次</h4>
+                            <div style="max-width: 400px; margin: 0 auto;">
+                                <ul class="guidance-list" style="margin-bottom: 0;">
+                                    <li style="padding: 10px 0;">進路希望別説明会</li>
+                                    <li style="padding: 10px 0;">大学・専門学校オープンキャンパス参加</li>
+                                    <li style="padding: 10px 0;">合同進学相談会参加</li>
+                                    <li style="padding: 10px 0;">企業見学（就職希望者）</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
