content: update H1 titles globally and re-add kokugakuin nav link

--- a/consultation.html
+++ b/consultation.html
@@ -132,6 +132,7 @@
                         <div class="dropdown-menu">
                             <a href="career.html#career_path">進路指導体制</a>
                             <a href="career.html#results">大学合格実績</a>
+                            <a href="career.html#interview">卒業生の声</a>
                         </div>
                     </div>
 
@@ -143,13 +144,14 @@
                         </div>
                     </div>
 
-                    <div class="nav-item"><a href="interview.html"><button>在校生/卒業生の声</button></a></div>
+                    <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
                 </nav>
 
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>個別相談会のご案内</h1>
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
