--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                         <a href="career.html"><button>進路指導 <span class="dropdown-arrow">▼</span></button></a>
                         <div class="dropdown-menu">
                             <a href="career.html#career_path">進路指導体制</a>
+                            <a href="career.html#kokugakuin">國學院大學連携協定</a>
                             <a href="career.html#results">大学合格実績</a>
                             <a href="career.html#interview">卒業生の声</a>
                         </div>
